Updated the profile description

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             >
           </p>
           <p>Lives in Portland, Oregon region of the United States</p>
-          <p>Avid Cricketer. Loves sports betting & gambling</p>
+          <p>Avid Cricketer. Loves sports betting & blackjack</p>
         </td>
       </tr>
     </table>
